src/objects/Payments_Received__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associated_Transactions__c</fullName>
        <label>Associated Transactions</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Associated Transaction must be attached to the same Provider than this payment.</errorMessage>
            <filterItems>
                <field>Licensing_Transaction__c.Provider__c</field>
                <operation>equals</operation>
                <valueField>$Source.Provider__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Licensing_Transaction__c</referenceTo>
        <relationshipLabel>Payments Received</relationshipLabel>
        <relationshipName>Payments_Recieved</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Last_4_Digits__c</fullName>
        <label>Credit Card # (Last 4 Digits)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Date__c</fullName>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <inlineHelpText>If error, please provide the description of the resolution (transfer, erroneous entry). If it has been associated with another Transaction, please enter the transaction # it&apos;s associated with.</inlineHelpText>
        <label>Error Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Check/Money Order #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Deposited</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bounced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erroneously Entered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider_Email__c</fullName>
        <label>Provider Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Provider will be added automatically by the system (it can be let empty), else make sure you use the provider associated with the transaction.</inlineHelpText>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments Received</relationshipLabel>
        <relationshipName>Payments_Recieved</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only licensing region can be chosen.</errorMessage>
            <filterItems>
                <field>Region__c.RecordType.Name</field>
                <operation>contains</operation>
                <value>Licensing</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Payments Received</relationshipLabel>
        <relationshipName>Payments_Received</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Payment__c</fullName>
        <label>Type of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Payments Received</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Region__c</columns>
        <columns>Associated_Transactions__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Received_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Bounced</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Region__c</columns>
        <columns>Associated_Transactions__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Received_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>Bounced</value>
        </filters>
        <label>All - Bounced</label>
    </listViews>
    <listViews>
        <fullName>All_Error</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Region__c</columns>
        <columns>Associated_Transactions__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Received_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>Erroneously Entered</value>
        </filters>
        <label>All - Erroneously Entered</label>
    </listViews>
    <listViews>
        <fullName>Last_Month_Bounced</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Region__c</columns>
        <columns>Associated_Transactions__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Received_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Central</value>
        </filters>
        <filters>
            <field>Deposit_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>Bounced</value>
        </filters>
        <label>Last Month - Bounced</label>
    </listViews>
    <listViews>
        <fullName>Last_Month_Central_Region</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Region__c</columns>
        <columns>Associated_Transactions__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Received_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Central</value>
        </filters>
        <filters>
            <field>Deposit_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Last Month - Central Region</label>
    </listViews>
    <listViews>
        <fullName>Last_Month_Deposited</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Region__c</columns>
        <columns>Associated_Transactions__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Received_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deposit_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>Deposited</value>
        </filters>
        <label>Last Month - Deposited</label>
    </listViews>
    <listViews>
        <fullName>Last_Month_Error</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Region__c</columns>
        <columns>Associated_Transactions__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Received_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Central</value>
        </filters>
        <filters>
            <field>Deposit_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>Erroneously Entered</value>
        </filters>
        <label>Last Month - Erroneously Entered</label>
    </listViews>
    <listViews>
        <fullName>Last_Month_Metro_Boston</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Region__c</columns>
        <columns>Associated_Transactions__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Received_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Metro Boston</value>
        </filters>
        <filters>
            <field>Deposit_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Last Month - Metro Boston</label>
    </listViews>
    <listViews>
        <fullName>Last_Month_Northeast_and_Cape_Region</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Region__c</columns>
        <columns>Associated_Transactions__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Received_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Northeast</value>
        </filters>
        <filters>
            <field>Deposit_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Last Month - Northeast Region</label>
    </listViews>
    <listViews>
        <fullName>Last_Month_Southeast_and_Cape_Region</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Region__c</columns>
        <columns>Associated_Transactions__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Received_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Southeast and Cape</value>
        </filters>
        <filters>
            <field>Deposit_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Last Month - Southeast and Cape Region</label>
    </listViews>
    <listViews>
        <fullName>Last_Month_Western_Region</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Region__c</columns>
        <columns>Associated_Transactions__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Received_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Western</value>
        </filters>
        <filters>
            <field>Deposit_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Last Month - Western Region</label>
    </listViews>
    <listViews>
        <fullName>This_Month_Bounced</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Region__c</columns>
        <columns>Associated_Transactions__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Received_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deposit_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>Bounced</value>
        </filters>
        <label>This Month - Bounced</label>
    </listViews>
    <listViews>
        <fullName>This_Month_Central</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Region__c</columns>
        <columns>Associated_Transactions__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Received_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Central</value>
        </filters>
        <filters>
            <field>Deposit_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month - Central</label>
    </listViews>
    <listViews>
        <fullName>This_Month_Central_and_Cape_Region</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Region__c</columns>
        <columns>Associated_Transactions__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Received_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Central</value>
        </filters>
        <filters>
            <field>Deposit_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month - Central Region</label>
    </listViews>
    <listViews>
        <fullName>This_Month_Deposited</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Region__c</columns>
        <columns>Associated_Transactions__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Received_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deposit_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>Deposited</value>
        </filters>
        <label>This Month - Deposited</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments Received</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Error_Description_mandatory_for_Error_En</fullName>
        <active>true</active>
        <description>If Payment Status = Erroneously Entered, than Error Description must be filled out</description>
        <errorConditionFormula>AND(ISPICKVAL(Payment_Status__c , &quot;Erroneously Entered&quot;), ISBLANK(Error_Description__c ))</errorConditionFormula>
        <errorDisplayField>Error_Description__c</errorDisplayField>
        <errorMessage>If Payment Status is &quot;Erroneously Entered&quot;, then Error Description must be filled out</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Provider_should_be_the_same_than_Transac</fullName>
        <active>true</active>
        <errorConditionFormula>AND (Associated_Transactions__r.Provider__c &lt;&gt; Provider__c , NOT(ISBLANK(Provider__c)))</errorConditionFormula>
        <errorDisplayField>Provider__c</errorDisplayField>
        <errorMessage>Provider selected should be the same provider than the one associated to the Licensing Transaction</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Received_data_greater_or_equal_to_deposi</fullName>
        <active>true</active>
        <description>Received date must be &gt;= to deposit date</description>
        <errorConditionFormula>Received_Date__c &lt; Deposit_Date__c</errorConditionFormula>
        <errorDisplayField>Received_Date__c</errorDisplayField>
        <errorMessage>Received Date must be superior or equal to Deposit Date</errorMessage>
    </validationRules>
</CustomObject>